Fixed some ish.

--- a/Exercise1/contact.html
+++ b/Exercise1/contact.html
@@ -4,8 +4,6 @@
 <head>
     <title>Επικοινωνία | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +12,6 @@
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -26,14 +23,13 @@
             <a href="/Exercise1/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
 
     <main class="main-content">
         <h2>Τεχνική Υποστήριξη</h2>
 
         <h3>Φόρμα Επικοινωνίας</h3>
-        <!--ΙΣΩΣ ΘΕΛΕΙ POST ΑΝΤΙ ΓΙΑ GET ΑΛΛΑ ΔΕΝ ΞΕΡΩ ΑΚΟΜΑ ΠΡΕΠΕΙ ΝΑ ΤΟ ΞΑΝΑΔΟΥΜΕ !!!!!!!-->
+
         <form action="index.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
             <div class="forma-input">
                 <label for="onoma">Όνομα:</label>
@@ -44,7 +40,6 @@
                 <label for="epwnymo">Επώνυμο:</label>
                 <input type="text" id="epwnymo" name="epwnymo">
             </div>
-
 
             <div class="forma-input">
                 <label for="email">Email:</label>
@@ -80,12 +75,10 @@
                 <input type="submit">
             </div>
         </form>
-
     </main>
 
-
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
         <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
         <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
