--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -4,18 +4,14 @@
 <head>
     <title>Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-
 </head>
 
 <body>
     <header class="header-light-color">
-        <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ ΝΑV ΜΟΝΟ TOY H ΣΤΑ ΥΠΟΛΟΙΠΑ-->
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -26,71 +22,71 @@
             <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
             <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-
         </nav>
-
     </header>
 
-
     <main class="main-content">
-
-
         <h2 class="welcome">Καλως Ήρθατε στο Τechnodata!</h2>
+
         <p>Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων τεχνολογίας όπως
             κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την εγγύηση
             ποιότητας του ομίλου μας.</p>
 
-
         <section class="section-promote">
             <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+
             <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
+
             <div class="product">
                 <a href="/Exercise1/product-iphone14-pro-max.html"><img src="/assets/iphone14pro.png" width="245"
                         height="230" alt="Apple iPhone 14 Pro Max" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/samsungs22.png" width="245" height="230"
                         alt="Samsung S22 Ultra" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/xiaomi.png" width="260" height="230"
                         alt="Xiaomi 12T Pro" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/ipad.png" width="230" height="230"
                         alt="Apple iPad Pro" class="image"></a>
             </div>
-
         </section>
 
         <section class="section-promote">
             <h2>Hot Προσφορές</h2><!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+
             <p>Εκθεσιακά προϊόντα και προηγούμενης γενίας σε μειωμένες τιμές</p>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/iphone_old.png" width="255" height="240"
                         alt="Apple iPhone 11" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/samsung_old.png" width="155" height="240"
                         alt="Samsung S10+" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/xiaomi_old.png" width="255" height="240"
                         alt="Xiaomi Pad 5" class="image"></a>
             </div>
+
             <div class="product">
                 <a href="/Exercise1/products-phones.html"><img src="/assets/apple_watch.png" width="255" height="240"
                         alt="Apple Watch Series 2" class="image"></a>
             </div>
-
         </section>
-
-
     </main>
 
-
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
         <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
         <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
@@ -103,8 +99,6 @@
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
-
-
 </body>
 
 </html>
