--- a/Exercise1/products-pcs.html
+++ b/Exercise1/products-pcs.html
@@ -4,18 +4,14 @@
 <head>
     <title>Ηλεκτρονικοί Υπολογιστές | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-
 </head>
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -27,10 +23,7 @@
             <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
-
-
 
     <main class="main-content">
         <div id="page-title">
@@ -41,13 +34,13 @@
         <section id="products">
             <ul>
                 <li class="product-card">
-
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs0.png" width="180" height="110" alt="">
                         <h2>Apple MacBook Pro Ultrabook Space Gray</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 457126 <br>
                         2021, 16.2" 3456x2234 Retina Display, M1-Max, 32GB, 1TB SSD, GR Keyboard.
                     </p>
@@ -62,8 +55,6 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs1.png" width="200" height="200" alt="">
 
@@ -85,14 +76,14 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs2.png" width="200" height="200" alt="">
 
                         <h2>Apple iMac All-in-One PC Silver</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 364521 <br>
                         2021, 24" 4480x2520 Retina Display, M1, 8GB, 256GB SSD, EN Keyboard.
                     </p>
@@ -108,13 +99,14 @@
                 </li>
 
                 <li class="product-card">
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs3.png" width="200" height="200" alt="">
 
                         <h2>MSI Intel Gaming Desktop PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 957614 <br>
                         2021, i5-10400F, 16GB DDR4, 240GB SSD, 500GB HDD, GeForce RTX 3060.
                     </p>
@@ -124,20 +116,19 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 3,6/5 αστέρια (168)</p>
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs4.png" width="200" height="200" alt="">
 
                         <h2>Apple Mac Mini PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 481267 <br>
                         2020, M1, 8GB, 512GB SSD.
                     </p>
@@ -154,14 +145,14 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise1/products-pcs.html">
                         <img src="/assets/pcs5.png" width="200" height="200" alt="">
 
                         <h2>MSI Cubi N Mini PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 657816 <br>
                         2019, N4500, 4GB, 128GB SSD.
                     </p>
@@ -180,7 +171,7 @@
     </main>
 
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
         <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
         <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
