--- a/Exercise2/about_us.html
+++ b/Exercise2/about_us.html
@@ -4,8 +4,6 @@
 <head>
     <title>Σχετικά με εμάς | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,18 +24,18 @@
             <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise2/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
 
     <main class="main-content">
         <h2>Ποιοι είμαστε!</h2>
 
         <section class="perilhpsh">
-            <h3><img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+            <h3><img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης
+            </h3>
 
             <p>
                 Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
-                Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
+                Πανεπιστήμιο Αθηνών το 2023, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
                 συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
                 <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την εκμάθηση
                 καίριων ικανοτήτων και ξένων γλωσσών.
@@ -51,7 +49,7 @@
 
             <p>
                 Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
-                πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
+                πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2023 και στην συνέχεια ασχολήθηκε με το front end
                 development.
                 <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του χρόνο
                 ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
