--- a/Exercise2/product-iphone14-pro-max.html
+++ b/Exercise2/product-iphone14-pro-max.html
@@ -4,8 +4,6 @@
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,9 +32,10 @@
 
         <h3 id="category"> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
-        
+
         <div class="iphone-code-price">
-            <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
+            <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo"
+                alt="Apple iPhone 14 Pro Max">
             <div id="iphone-price">267271 <br> €1549.00</div>
         </div>
 
@@ -71,7 +70,7 @@
             </div>
         </section>
 
-      
+
 
         <img src="/assets/analytiko.jpg" class="comparison"
             alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
@@ -209,40 +208,38 @@
         </section>
 
         <section class="forma">
-                <h3>Δώστε μας μια βαθμολογία!</h3>
+            <h3>Δώστε μας μια βαθμολογία!</h3>
 
-                <form action="/Exercise2/product-iphone14-pro-max.html" class="vathmologia-asteria">
-                    <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
+            <form action="/Exercise2/product-iphone14-pro-max.html" class="vathmologia-asteria">
+                <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
 
-                    <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
-                    <label for="1ast">1 αστέρι</label>
+                <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
+                <label for="1ast">1 αστέρι</label>
 
-                    <input type="radio" id="2ast" name="vathmologia" class="epilogh" value="2 αστέρια">
-                    <label for="2ast">2 αστέρια</label>
+                <input type="radio" id="2ast" name="vathmologia" class="epilogh" value="2 αστέρια">
+                <label for="2ast">2 αστέρια</label>
 
-                    <input type="radio" id="3ast" name="vathmologia" class="epilogh" value="3 αστέρια">
-                    <label for="3ast">3 αστέρια</label>
+                <input type="radio" id="3ast" name="vathmologia" class="epilogh" value="3 αστέρια">
+                <label for="3ast">3 αστέρια</label>
 
-                    <input type="radio" id="4ast" name="vathmologia" class="epilogh" value="4 αστέρια">
-                    <label for="4ast">4 αστέρια</label>
+                <input type="radio" id="4ast" name="vathmologia" class="epilogh" value="4 αστέρια">
+                <label for="4ast">4 αστέρια</label>
 
-                    <input type="radio" id="5ast" name="vathmologia" class="epilogh" value="5 αστέρια">
-                    <label for="5ast">5 αστέρια</label>
+                <input type="radio" id="5ast" name="vathmologia" class="epilogh" value="5 αστέρια">
+                <label for="5ast">5 αστέρια</label>
 
-                    <label for="sxolia" id="sxolia-title">Τα σχόλια σας:</label>
-                    <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
-                    <br>
+                <label for="sxolia" id="sxolia-title">Τα σχόλια σας:</label>
+                <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
+                <br>
 
-                    <input type="submit">
-                </form>
-            </section>
+                <input type="submit">
+            </form>
+        </section>
 
     </main>
 
-   
-
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
         <a href="/Exercise2/index.html">
             <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
