--- a/Exercise3/product-iphone14-pro-max.html
+++ b/Exercise3/product-iphone14-pro-max.html
@@ -4,8 +4,6 @@
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +12,6 @@
 </head>
 
 <body>
-
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
@@ -38,9 +35,10 @@
 
                 <h3 id="category"> <a href="/Exercise3/products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
-                
+
                 <div class="iphone-code-price">
-                    <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
+                    <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo"
+                        alt="Apple iPhone 14 Pro Max">
                     <div id="iphone-price">267271 <br> €1549.00</div>
                 </div>
 
@@ -76,7 +74,7 @@
                     </div>
                 </section>
 
-               
+
 
                 <img src="/assets/analytiko.jpg" class="comparison"
                     alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
@@ -241,18 +239,12 @@
                         <input type="submit">
                     </form>
                 </section>
-
             </main>
         </div>
 
-
-
-
-
-
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="/Exercise3/index.html">
                     <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
