--- a/Exercise3/products-phones.html
+++ b/Exercise3/products-phones.html
@@ -4,8 +4,6 @@
 <head>
     <title>Κινητή Τηλεφωνία | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +12,6 @@
 </head>
 
 <body>
-
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
@@ -285,7 +282,7 @@
 
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="/Exercise3/index.html">
                     <img class="image" src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
