--- a/Exercise1/about_us.html
+++ b/Exercise1/about_us.html
@@ -4,18 +4,14 @@
 <head>
     <title>Σχετικά με εμάς | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-
 </head>
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -27,38 +23,35 @@
             <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise1/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
 
     <main class="main-content">
         <h2>Ποιοι είμαστε!</h2>
-        <!-- ΕΔΩ ΝΑ ΣΗΜΕΙΩΣΩ ΟΤΙ ΘΑ ΒΑΛΟΥΜΕ ΕΙΚΟΝΑ ΜΑΣ ΚΑΙ ΔΙΠΛΑ ΛΟΓΙΑ ... ΑΥΤΟ ΘΑ ΓΙΝΕΙ ΜΕΣΩ ΣΤΟ FLOAT (ΑΝ ΘΥΜΑΜΑΙ ΚΑΛΑ) ΣΤΟ 2ο ΠΑΡΑΔΟΤΕΟ-->
+
         <section class="perilhpsh">
             <h3><img src="/assets/jimmy.png" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+
             <p>
                 Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
-                Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
+                Πανεπιστήμιο Αθηνών το 2023, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
                 συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
                 <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την εκμάθηση
                 καίριων ικανοτήτων και ξένων γλωσσών.
                 <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία εξακολουθεί
                 να προπονείται και να παρακολουθεί.
             </p>
-
         </section>
 
-
-        <!-- ΕΔΩ ΝΑ ΣΗΜΕΙΩΣΩ ΟΤΙ ΘΑ ΒΑΛΟΥΜΕ ΕΙΚΟΝΑ ΜΑΣ ΚΑΙ ΔΙΠΛΑ ΛΟΓΙΑ ... ΑΥΤΟ ΘΑ ΓΙΝΕΙ ΜΕΣΩ ΣΤΟ FLOAT (ΑΝ ΘΥΜΑΜΑΙ ΚΑΛΑ) ΣΤΟ 2ο ΠΑΡΑΔΟΤΕΟ-->
         <section class="perilhpsh">
             <h3><img src="/assets/tasos1.png" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής</h3>
+
             <p>
                 Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
-                πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
+                πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2023 και στην συνέχεια ασχολήθηκε με το front end
                 development.
                 <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του χρόνο
                 ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
             </p>
-
         </section>
 
         <p class="synexeia-perilhpshs">
@@ -68,13 +61,10 @@
             ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές της
             αγοράς.
         </p>
-
     </main>
 
-
-
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
         <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
         <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
