--- a/Exercise1/product-iphone14-pro-max.html
+++ b/Exercise1/product-iphone14-pro-max.html
@@ -4,19 +4,14 @@
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-
 </head>
 
 <body>
-
     <header class="header-light-color">
-
         <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -28,12 +23,9 @@
             <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
 
-
     <main class="main-content">
-
         <h2>Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
         <h3> <a href="/Exercise1/products-phones.html">Κινητό Τηλέφωνο</a></h3>
         <h4>267271</h4>
@@ -44,13 +36,10 @@
         </div>
 
         <section class="product-descr">
-            <!-- ΝΑ ΒΑΛΟΥΜΕ ΞΕΧΩΡΙΣΤΑ CLASS ΣΤΟ ΚΑΘΕ DIV!!!!-->
             <div class="outer-box">
                 <div class="manifacturer">
                     <h3>Κατασκευαστής</h3>
-
                     <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
-
                 </div>
 
                 <div class="perigrafh">
@@ -58,7 +47,6 @@
                     <p>iPhone 14 Pro Max. Αιχμαλώτισε εικόνες με απίστευτη λεπτομέρεια με την κύρια κάμερα 48MP. Ζήσε τη
                         νέα εμπειρία iPhone με τη νέα Dynamic Island και την οθόνη Always-On. Η λειτουργία Crash
                         Detection, μια νέα δυνατότητα ασφάλειας, καλεί σε βοήθεια όταν εσύ δεν μπορείς.</p>
-
                 </div>
 
                 <div class="xarakthristika">
@@ -69,9 +57,7 @@
                         Πλήθος Πυρήνων: Hexa Core<br>
                         Χωρητικότητα σε GB: 128<br>
                         Εύρος Οθόνης: 6 ίντσες και άνω</p>
-
                 </div>
-
             </div>
         </section>
 
@@ -81,100 +67,118 @@
             <div class="row-title">
                 <h3>Τεχνικά Χαρακτηριστικά</h3>
             </div>
+
             <div class="row">
                 <div class="label">Mέγεθος Οθόνης σε Ίντσες</div>
                 <div class="value">6.7</div>
             </div>
+
             <div class="row">
                 <div class="label">Κύρια Κάμερα</div>
                 <div class="value">Triple 48 Mp & 12 Mp & 12 Mp </div>
             </div>
+
             <div class="row">
                 <div class="label">Selfie Κάμερα</div>
                 <div class="value">12 Mp</div>
             </div>
+
             <div class="row">
                 <div class="label">Πλήθος Πυρήνων</div>
                 <div class="value">Hexa Core</div>
             </div>
+
             <div class="row">
                 <div class="label">Χωρητικότητα σε GB</div>
                 <div class="value">128</div>
             </div>
+
             <div class="row">
                 <div class="label">Μοντέλο Επεξεργαστή</div>
                 <div class="value">A16 Bionic chip</div>
             </div>
+
             <div class="row">
                 <div class="label">Δίκτυο Σύνδεσης</div>
                 <div class="value">5G</div>
             </div>
+
             <div class="row">
                 <div class="label">Δυνατότητα Βιντεοκλήσης</div>
                 <div class="value">Υποστηρίζεται</div>
             </div>
+
             <div class="row">
                 <div class="label">Εγγραφή Video</div>
                 <div class="value">4K</div>
             </div>
+
             <div class="row">
                 <div class="label">Δέκτης GPS</div>
                 <div class="value">AGPS, GPS, Galileo, QZSS, GLONASS, Beidou</div>
             </div>
+
             <div class="row">
                 <div class="label">Φλάς</div>
                 <div class="value">True Tone flash & Retina Flash</div>
             </div>
+
             <div class="row">
                 <div class="label">Χρώμα</div>
                 <div class="value">Μαύρο</div>
             </div>
+
             <div class="row">
                 <div class="label">Λειτουργικό</div>
                 <div class="value">iOS</div>
             </div>
+
             <div class="row">
                 <div class="label">Βάρος σε gr</div>
                 <div class="value">240</div>
             </div>
+
             <div class="row">
                 <div class="label">Διαστάσεις σε mm (Υ x Π x Β)</div>
                 <div class="value">160.7 x 77.6 x 7.85</div>
             </div>
+
             <div class="row">
                 <div class="label">Συμπεριλαμβάνονται</div>
                 <div class="value">Καλώδιο USB-C to Lightning, Έγγραφα</div>
             </div>
+
             <div class="row">
                 <div class="label">Υποστηρικτική τεχνολογία για κινητικές αναπηρίες</div>
                 <div class="value">Διακόπτες Ελέγχου, Assistive Touch, Καθοδηγούμενη Πρόσβαση</div>
             </div>
+
             <div class="row">
                 <div class="label">Υποστηρικτική τεχνολογία για μειωμένη όραση</div>
                 <div class="value">Magnifier, Επιλογές Απεικόνισης, Φωνητικός Έλεγχος, Αφήγηση</div>
             </div>
+
             <div class="row">
                 <div class="label">Υποστηρικτική τεχνολογία για μειωμένη ακοή</div>
                 <div class="value">Βιντεοκλήσεις μέσω FaceTime, LED Flash Alerts</div>
             </div>
+
             <div class="row">
                 <div class="label">>Εγγύηση Προμηθευτή</div>
                 <div class="value">2 έτη</div>
             </div>
+
             <div class="row">
                 <div class="label">Site</div>
                 <div class="value"><a href="http://www.apple.com">http://www.apple.com</a></div>
             </div>
         </section>
-
-
     </main>
 
     <section class="forma">
-        <!-- ΙΣΩΣ Η ΒΑΘΜΟΛΟΓΙΑ ΝΑ ΘΕΛΕΙ ΚΑΙ ΜΕΣΑ ΣΤΟ ΜΑΙΝ... ΘΑ ΔΟΥΜΕ!!!!!-->
         <h3>Δώστε μας μια βαθμολογία!</h3>
-        <form action="/Exercise1/product-iphone14-pro-max.html" class="vathmologia-asteria">
 
+        <form action="/Exercise1/product-iphone14-pro-max.html" class="vathmologia-asteria">
             <p>Βαυμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
             <input type="radio" id="1ast" name="vathmologia" value="1 αστέρι">
             <label for="1ast">1 αστέρι</label>
@@ -193,12 +197,11 @@
 
             <br>
             <input type="submit">
-
         </form>
     </section>
 
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
         <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
         <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
