--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -4,8 +4,6 @@
 <head>
     <title>Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,9 +37,8 @@
             ποιότητας του ομίλου μας.
         </p>
 
-
         <section class="section-promote">
-            <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+            <h2>Νέες Παραλαβές</h2>
 
             <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
 
@@ -84,7 +81,8 @@
 
             <div class="product">
                 <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image" id="slim">
+                    <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image"
+                        id="slim">
                 </a>
             </div>
 
