--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -4,8 +4,6 @@
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -308,7 +306,7 @@
     </main>
 
     <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
         <a href="/Exercise2/index.html">
             <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
