--- a/Exercise5/index.html
+++ b/Exercise5/index.html
@@ -4,8 +4,6 @@
 <head>
     <title>Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,11 +18,9 @@
                 <a href="/Exercise5/index.html">
                     <img srcset="/assets/Technodata-logos_black_SR.png 600w,
                         /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w"
-                        sizes="(max-width: 600px) 80vw,
+                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px"
-                    src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
@@ -46,46 +42,51 @@
                 <h2 class="welcome">Καλως Ήρθατε στο Τechnodata!</h2>
 
                 <p>
-                    Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων τεχνολογίας όπως
-                    κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την εγγύηση
+                    Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων
+                    τεχνολογίας όπως
+                    κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την
+                    εγγύηση
                     ποιότητας του ομίλου μας.
                 </p>
 
 
                 <section class="section-promote">
-                    <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                    <h2>Νέες Παραλαβές</h2>
 
                     <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
 
                     <div class="prod-photos">
                         <div class="product">
                             <a href="/Exercise5/product-iphone14-pro-max.html">
-                                <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
+                                <img src="/assets/iphone14pro.png" width="245" height="230"
+                                    alt="Apple iPhone 14 Pro Max" class="image">
+                            </a>
+                        </div>
+
+                        <div class="product">
+                            <a href="/Exercise5/products-phones.html">
+                                <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra"
                                     class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
+                                <img src="/assets/xiaomi_new.png" width="245" height="230" alt="Xiaomi 12T Pro"
+                                    class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/xiaomi_new.png" width="245" height="230" alt="Xiaomi 12T Pro" class="image">
-                            </a>
-                        </div>
-
-                        <div class="product">
-                            <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/ipad_new.png" width="245" height="230" alt="Apple iPad Pro" class="image">
+                                <img src="/assets/ipad_new.png" width="245" height="230" alt="Apple iPad Pro"
+                                    class="image">
                             </a>
                         </div>
                     </div>
                 </section>
 
-                
+
                 <section class="section-promote">
                     <h2>Hot Προσφορές</h2>
 
@@ -94,25 +95,29 @@
                     <div class="prod-photos">
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
+                                <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11"
+                                    class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/samsung_old.png" width="255" height="240" alt="Samsung S10+" class="image">
+                                <img src="/assets/samsung_old.png" width="255" height="240" alt="Samsung S10+"
+                                    class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
+                                <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5"
+                                    class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise5/products-phones.html">
-                                <img src="/assets/apple_watch_new.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
+                                <img src="/assets/apple_watch_new.png" width="255" height="240"
+                                    alt="Apple Watch Series 2" class="image">
                             </a>
                         </div>
                     </div>
@@ -122,7 +127,7 @@
 
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>ζ
 
                 <a href="/Exercise5/index.html">
                     <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
@@ -142,7 +147,8 @@
                 <h4>©2022 Techodata Computers</h4>
 
                 <a href="/Exercise5/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                        alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
         </div>
