--- a/Exercise5/product-categories.html
+++ b/Exercise5/product-categories.html
@@ -4,8 +4,6 @@
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -324,17 +322,20 @@
 
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="/Exercise5/index.html">
                     <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
+
                 <a href="/Exercise5/index.html">
                     <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
+
                 <a href="/Exercise5/index.html">
                     <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
+
                 <a href="/Exercise5/index.html">
                     <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
@@ -347,8 +348,6 @@
                 </a>
             </footer>
         </div>
-
-
     </div>
 </body>
 
