--- a/Exercise5/products-phones.html
+++ b/Exercise5/products-phones.html
@@ -4,8 +4,6 @@
 <head>
     <title>Κινητή Τηλεφωνία | Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <meta name="description" content=" ">
-    <meta name="keywords" content=" ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,18 +12,15 @@
 </head>
 
 <body>
-
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
                 <a href="/Exercise5/index.html">
                     <img srcset="/assets/Technodata-logos_black_SR.png 600w,
                         /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w"
-                        sizes="(max-width: 600px) 80vw,
+                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px"
-                    src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
@@ -189,7 +184,6 @@
                                         alt="shopping cart image"></span>
                                 <span class="buy">Αγορά</span>
                             </button>
-
                         </div>
 
                         <div class="product-image">
@@ -229,7 +223,6 @@
                                         alt="shopping cart image"></span>
                                 <span class="buy">Αγορά</span>
                             </button>
-
                         </div>
 
                         <div class="product-image">
@@ -296,7 +289,7 @@
 
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="/Exercise5/index.html">
                     <img class="image" src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
