--- a/Exercise5/index.html
+++ b/Exercise5/index.html
@@ -127,7 +127,7 @@
 
         <div class="footer-item">
             <footer class="footer-content">
-                <h4>Βρείτε μας στα ακόλουθα social media</h4>ζ
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="/Exercise5/index.html">
                     <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
