--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -209,8 +209,23 @@
                     <fieldset>
                         <legend>Ερωτηματολόγιο</legend>
 
-                        <label for="askFrequency">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
-                            χρησιμοποιείται;</label>
+                        <label for="askInfluence">Από που μάθατε για το κατάστημά μας;</label>
+                        <select name="askInfluence" id="askInfluence">
+                            <option value="add">Από διαφήμιση</option>
+                            <option value="friend">Από γνωστό/ φίλο</option>
+                            <option value="other">Άλλο</option>
+                        </select>
+
+                        <label for="askFulfillment">Πόσο ευχαριστημένοι είστε από το κατάστημα μας;</label>
+                        <select name="askFulfillment" id="askFulfillment">
+                            <option value="5">Πάρα πολύ</option>
+                            <option value="4">Πολύ</option>
+                            <option value="3">Μέτρια</option>
+                            <option value="2">Λίγο</option>
+                            <option value="1">Καθόλου</option>
+                        </select>
+
+                        <label for="askFrequency">Πόσο συχνά πραγματοποιείται μία διαδικτυακή αγορά;</label>
                         <select name="askFrequency" id="askFrequency">
                             <option value="everyDay">Καθημερινά</option>
                             <option value="everyWeek">Εβδομαδιαία</option>
