--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -70,7 +70,7 @@
 
                         <label for="tel">Τηλέφωνο Επικοινωνίας:</label>
                         <div class="formControl">
-                            <input id="tel" name="tel" type="tel" autocomplete="tel-national" placeholder="6912345678"
+                            <input id="tel" name="tel" type="tel" autocomplete="tel" placeholder="6912345678"
                                 required pattern="[0-9]{10}">
                             <p class="errorMsg" id="telError"></p>
                         </div>
@@ -116,7 +116,7 @@
                         <p class="errorMsg" id="countyError"></p>
 
                         <label for="postalCode">Τ.Κ.:</label>
-                        <input id="postalCode" name="postalCode" type="number" autocomplete="postal-code"
+                        <input id="postalCode" name="postalCode" type="text" autocomplete="postal-code"
                             placeholder="10434" required pattern="[0-9]{5}">
                         <p class="errorMsg" id="postalCodeError"></p>
 
